--- a/recipes/Tiramisu.html
+++ b/recipes/Tiramisu.html
@@ -16,6 +16,7 @@
             delightful crunchiness to the smooth creamy
             whipped cream quality of an already perfect dessert.
          </p></h5>
+         
         <h2>Ingredients</h2>
         <ul>
             <li>1 (10.75 ounce) package frozen prepared pound cake, 
@@ -27,6 +28,31 @@
             <li>2 cups heavy whipping cream </li>
             <li>2 (1.4 ounce) bars chocolate covered English toffee, chopped </li>
         </ul>
+        <hr />
+
+        <h2>Steps</h2>
+
+        <ol>
+            <li>
+                Arrange cake slices on bottom of a rectangular 11x7 
+                inch baking dish, cutting cake slices if 
+                necessary to fit the bottom of the dish. 
+                Drizzle coffee over cake.
+            </li>
+
+            <li>
+                Beat cream cheese, sugar, and chocolate syrup, in a large bowl with an electric mixer 
+                on medium speed until smooth. 
+                Add heavy cream; beat on medium speed until light and fluffy. 
+                Spread over cake. Sprinkle with chocolate-covered toffee candy.
+            </li>
+
+            <li>
+                Cover and refrigerate for at least 1 hour, 
+                but no longer than 24 hours, 
+                to set dessert and blend flavors.
+            </li>
+        </ol>
         
     </body>
 </html>
