--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
 
         <a href="../recipes/Tiramisu.html">Tiramisu</a>
+        <a href="../odin-recipes/recipes/Salsa.html">Spicy Salsa</a>
 
     </body>
 </html>
