added a description of the recipe

--- a/recipes/Salsa.html
+++ b/recipes/Salsa.html
@@ -7,7 +7,11 @@
     <body>
         <h1>Jen's Fresh and Spicy Salsa</h1>
         <img src="../recipes/images/salsa.jpg" alt="" width='300'>
-        <p></p>
+        <p><strong>This recipe is bursting with flavor! It is fresh and spicy, 
+            and did I mention easy? This is the closest thing to 
+            restaurant style salsa you will find. The jalapenos and 
+            hot pepper sauce (e.g., Tabasco) add spice to the mix and the cilantro, 
+            lime juice, and green onions create freshness.</strong></p>
         <hr />
 
     </body>
