--- a/recipes/Salsa.html
+++ b/recipes/Salsa.html
@@ -13,6 +13,17 @@
             hot pepper sauce (e.g., Tabasco) add spice to the mix and the cilantro, 
             lime juice, and green onions create freshness.</strong></p>
         <hr />
+        <h2>Ingredients</h2>
+        <ul>
+            <li>10 green onions </li>
+            <li>2 fresh jalapeno peppers, seeded </li>
+            <li>¼ cup chopped fresh cilantro </li>
+            <li>2 tablespoons fresh lime juice </li>
+            <li>2 tablespoons hot pepper sauce </li>
+            <li>1 teaspoon ground black pepper </li>
+            <li>1 teaspoon garlic powder </li>
+            <li>1 teaspoon salt </li>
+        </ul>
 
     </body>
 </html>
