added ordered list and items

--- a/recipes/Salsa.html
+++ b/recipes/Salsa.html
@@ -25,5 +25,14 @@
             <li>1 teaspoon salt </li>
         </ul>
 
+        <h2>Steps</h2>
+        <ol>
+           <li>In a blender or food processor, pulse the tomatoes, green onions, 
+               jalapeno peppers, and cilantro to desired consistency. 
+               Transfer to a bowl, and mix in the lime juice,
+                hot pepper sauce, black pepper, garlic powder, 
+                and salt.</li> 
+        </ol>
+
     </body>
 </html>
