made the structure of html for appliepie.html

--- a/recipes/ApplePie.html
+++ b/recipes/ApplePie.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <h1>Grandma's Iron Skillet Applie Pie</h1>
         
     </body>
 </html>
