added a img src of an apple pie with alt of what the img is

--- a/recipes/ApplePie.html
+++ b/recipes/ApplePie.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Grandma's Iron Skillet Applie Pie</h1>
-        
+        <img src="../recipes/images/applepie.jpg" alt="a applie pie" width='300'>
     </body>
 </html>
