added a description under image

--- a/recipes/ApplePie.html
+++ b/recipes/ApplePie.html
@@ -7,5 +7,10 @@
     <body>
         <h1>Grandma's Iron Skillet Applie Pie</h1>
         <img src="../recipes/images/applepie.jpg" alt="a applie pie" width='300'>
+        <p>
+        <strong>This three-layer apple pie is a Southern favorite! </strong>
+        </p>
+        <hr />
+
     </body>
 </html>
