inserted a header for ingredients, along with unordered list of items

--- a/recipes/ApplePie.html
+++ b/recipes/ApplePie.html
@@ -11,6 +11,18 @@
         <strong>This three-layer apple pie is a Southern favorite! </strong>
         </p>
         <hr />
+        <h2>Ingredients</h2>
+        <ul>
+            <li>½ cup butter </li>
+            <li>5 Granny Smith apples -- peeled, cored, quartered, and thinly sliced </li>
+            <li>1 cup brown sugar </li>
+            <li>3 (9 inch) refrigerated prerolled pie crusts </li>
+            <li>1 cup white sugar, divided </li>
+            <li>2 teaspoons ground cinnamon, divided </li>
+            <li>¼ cup white sugar </li>
+            <li>1 tablespoon butter, cut into small chunks </li>
+        </ul>
+        
 
     </body>
 </html>
