made an unordered list out of the links

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="../odin-recipes/recipes/Tiramisu.html">Tiramisu</a>
-        <a href="../odin-recipes/recipes/Salsa.html">Spicy Salsa</a>
-        <a href="../odin-recipes/recipes/ApplePie.html">Apple Pie</a>
-
+<ul>
+       <li><a href="../odin-recipes/recipes/Tiramisu.html">Tiramisu</a></li>
+        <li><a href="../odin-recipes/recipes/Salsa.html">Spicy Salsa</a></li>
+       <li><a href="../odin-recipes/recipes/ApplePie.html">Apple Pie</a></li>
+</ul>
 
     </body>
 </html>
