added an image to index.html also a background color

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <title>Odin Recipes</title>
         <meta charset="utf-8">
+        <body style="background-color:darkgoldenrod;">
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="../odin-recipes/recipes/images/cooking.jpg" alt="">
 <ul>
-       <li><a href="../odin-recipes/recipes/Tiramisu.html">Tiramisu</a></li>
+      <li><a href="../odin-recipes/recipes/Tiramisu.html">Tiramisu</a></li>
         <li><a href="../odin-recipes/recipes/Salsa.html">Spicy Salsa</a></li>
        <li><a href="../odin-recipes/recipes/ApplePie.html">Apple Pie</a></li>
 </ul>
