added a background color to all html code

--- a/recipes/ApplePie.html
+++ b/recipes/ApplePie.html
@@ -3,6 +3,7 @@
     <head>
         <title>Odin Recipes</title>
         <meta charset="utf-8">
+        <body style="background-color:darkgoldenrod;">
     </head>
     <body>
         <h1>Grandma's Iron Skillet Applie Pie</h1>
