--- a/recipes/Salsa.html
+++ b/recipes/Salsa.html
@@ -3,6 +3,7 @@
     <head>
         <title>Odin Recipes</title>
         <meta charset="utf-8">
+        <body style="background-color:darkgoldenrod;">
     </head>
     <body>
         <h1>Jen's Fresh and Spicy Salsa</h1>
